# media-editor

./: .gitignore  gradle.properties  gradlew  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_effects.cpp  image_effects.cpp  native_processor.cpp
app/src/main/java/com/mediaeditor/: MainActivity.kt  MediaEditorApp.kt
app/src/main/java/com/mediaeditor/editor/: AudioProcessor.kt  EffectProcessor.kt  ExportProcessor.kt  FilterProcessor.kt  PhotoEditEngine.kt  VideoProcessor.kt
app/src/main/java/com/mediaeditor/model/: MediaModels.kt
app/src/main/java/com/mediaeditor/ndk/: NativeProcessor.kt
app/src/main/java/com/mediaeditor/ui/: MainScreen.kt  PhotoEditorScreen.kt  VideoEditorScreen.kt
app/src/main/java/com/mediaeditor/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/mediaeditor/util/: FileUtils.kt  PermissionUtils.kt
app/src/main/res/drawable/: ic_editor_foreground.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
